--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,15 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Kestrel": {
+    "Endpoints": {
+      "Http": {
+        "Url": "http://localhost:8081"
+      }
+    }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=DESKTOP-POVKKBR\\SQLEXPRESS;Initial Catalog=crm;Integrated Security=True;"
+  }
 }
