Updated Dockerfile and docker-compose.yml

--- a/PL/appsettings.json
+++ b/PL/appsettings.json
@@ -14,6 +14,6 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=sql-server-db,1433;Database=crm;User ID=sa;Password=SA_PASSWORD;Persist Security Info=False;TrustServerCertificate=true;"
+    "DefaultConnection": "Server=sql-server-db;Database=crm;User Id=sa;Password=StrongPassword123;"
   }
 }
