--- a/PL/PL.csproj
+++ b/PL/PL.csproj
@@ -7,6 +7,7 @@
     <UserSecretsId>80f07b1e-d4ba-4610-9dad-91828c82b8f5</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <DockerfileContext>.</DockerfileContext>
+    <DockerComposeProjectPath>docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
   <ItemGroup>
